# ic-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.sh  denylist_seed.json  repro-env.toml  root_key.der  run-tests.sh  rust-toolchain.toml  unit-tests.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  rust.yml  test.yml
benches/: domain_lookup.rs  http_gateway.rs  router.rs  vector.rs
deploy/: ic-gateway.env  ic-gateway.service
src/: api.rs  cli.rs  core.rs  lib.rs  log.rs  main.rs  smtp.rs  tasks.rs  test.rs
src/cache/: mod.rs
src/cashier/: client.rs  connector.rs  mod.rs  types.rs
src/dns/: mod.rs
src/http/: client.rs  dns.rs  headers.rs  mod.rs  server.rs
src/log/: clickhouse.rs  mod.rs
src/metrics/: body.rs  clickhouse.rs  mod.rs  runner.rs  vector.rs
src/policy/: denylist.rs  domain_canister.rs  mod.rs
src/routing/: body.rs  canister.rs  custom_domains.rs  domain.rs  error_cause.rs  handler.rs  mod.rs  proxy.rs  sev_snp.rs
src/routing/error_pages/: 451.html  caffeine_error.html  caffeine_error_unknown_domain.html  identity.html  template.html
src/routing/error_pages/components/: appeal_section.html  canister_section.html  retry_logic.js  retry_section.html
src/routing/ic/: handler.rs  health_check.rs  http_service.rs  latency_based_routing.rs  mod.rs  nodes_fetcher.rs  route_provider.rs  routing_table_manager.rs  subnets_info.rs  transport.rs
src/routing/ic/route_provider/: fetcher.rs  health.rs  mod.rs  provider.rs  routes.rs  wrr.rs
src/routing/middleware/: cache.rs  canister_match.rs  cors.rs  denylist.rs  geoip.rs  headers.rs  is_bot.rs  mod.rs  policy.rs  preprocess.rs  prerender.rs  rate_limiter.rs  redirector.rs  request_id.rs  request_type.rs  validate.rs
src/routing/storage/: auth.rs  bucket.rs  bucket_config.rs  cashier_client.rs  cashier_connector.rs  handler.rs  handlers.rs  mod.rs  types.rs  wire.rs
src/s3/: bucket.rs  mod.rs
src/storage/: auth.rs  mod.rs  paths.rs  types.rs
src/tls/: acme.rs  mod.rs  resolver.rs  sessions.rs  tickets.rs
src/tls/acme/: alpn.rs  mod.rs
src/tls/acme/dns/: cloudflare.rs  mod.rs
src/tls/cert/: dir.rs  mod.rs  ocsp.rs  storage.rs
src/tls/cert/providers/: dir.rs  file.rs  mod.rs
src/tls/cert/providers/issuer/: mod.rs  verify.rs
src/tls/cert/providers/syncer/: mod.rs  verify.rs
src/tls/cert/syncer/: mod.rs  verify.rs
test_data/: allowlist.txt  cert.pem  denylist.json  key.pem  test_acme_account.json  test_ic_identity.pem
tests/: all_tests.rs  asset_canister_test.rs  content_type_headers_test.rs  counter_canister.rs  helpers.rs
tests/integration_tests/: api_proxy_test.rs  asset_canister_test.rs  content_type_headers_test.rs  cors_headers_test.rs  denylist_test.rs  http_gateway_test.rs  mod.rs
tools/: cloudflare_check.rs  create_acme_account.rs  gen_testdata.rs
