[package]
name = "ic-gateway"
version = "0.2.0"
description = "HTTP-to-IC gateway"
edition = "2024"
default-run = "ic-gateway"

[features]
default = []

sev-snp = ["ic-bn-lib/sev-snp"]
acme = ["ic-bn-lib/acme-dns", "ic-bn-lib/acme-alpn"]
bench = ["dep:ic-http-certification", "dep:rand_regex", "dep:serde_cbor"]
tokio_console = ["dep:console-subscriber"]
debug = []

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.93"
arc-swap = "1.7.1"
async-trait = "0.1.83"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.10.0"
bytes = "1.10.0"
candid = "0.10.10"
clap = { version = "4.5.20", features = ["derive", "string", "env"] }
cloudflare = { version = "0.14.0", default-features = false, features = [
    "rustls-tls",
] }
console-subscriber = { version = "0.4.1", optional = true }
ctrlc = { version = "3.4.5", features = ["termination"] }
derive-new = "0.7.0"
fqdn = { version = "0.5.2", features = ["serde"] }
futures = "0.3.31"
hickory-resolver = { version = "0.25.1", features = [
    "tls-ring",
    "https-ring",
    "dnssec-ring",
    "webpki-roots",
] }
hostname = "0.4.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.2"
humantime = "2.2.0"
ic-bn-lib = { version = "0.1", features = [
    "acme",
    "vector",
    "cert-providers",
    "clients-hyper",
] }
ic-bn-lib-common = "0.1"
ic-custom-domains-backend = "0.1"
ic-custom-domains-base = "0.1"
ic-http-certification = { version = "3.1.0", optional = true }
ic-transport-types = "0.45"
ic-http-gateway = { git = "https://github.com/dfinity/http-gateway", tag = "v0.4.2" }
itertools = "0.14.0"
lazy_static = "1.5.0"
maxminddb = "0.27.0"
moka = { version = "0.12.8", features = ["sync", "future"] }
prometheus = "0.14.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_regex = { version = "0.17.0", optional = true }
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "http2",
    "rustls-tls",
    "hickory-dns",
    "json",
    "stream",
] }
rustls = { version = "0.23.18", default-features = false, features = [
    "ring",
    "std",
    "brotli",
] }
serde = "1.0.214"
serde_cbor = { version = "0.11.2", optional = true }
serde_json = "1.0.132"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
tikv-jemallocator = "0.6.0"
tikv-jemalloc-ctl = { version = "0.6.0", features = ["stats"] }
time = { version = "0.3.36", features = ["macros", "serde"] }
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tower = { version = "0.5.1", features = ["limit"] }
tower-http = { version = "0.6.1", features = ["cors", "compression-full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = "2.5.3"
# DO NOT upgrade, this breaks monorepo compatibility
# Read https://github.com/uuid-rs/uuid/releases/tag/1.13.0
uuid = { version = "=1.12.1", features = ["v7"] }
woothee = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
hex = "0.4.3"
httptest = "0.16.1"
ic-certified-assets = { git = "https://github.com/dfinity/sdk.git", rev = "d65717bd6d0c172247c37dd23395c9fb13b2ba20" }
ic-http-certification = "3.1.0"
mockall = "0.13.0"
nix = { version = "0.30.0", features = ["signal"] }
pocket-ic = "=12.0.0"
rand_regex = "0.17.0"
serde_cbor = "0.11.2"
tempfile = "3.18.0"
wat = "1.228.0"

[patch.crates-io]
# v0.3.3 breaks backwards compatibility, do not remove unless you want to deal with it.
ic-management-canister-types = { git = "https://github.com/dfinity/cdk-rs", rev = "19fdcd4c928b71d010aa124e2bb7f874290edac9" }

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[package.metadata.cargo-all-features]
always_include_features = ["debug"]
denylist = ["bench", "tokio_console"]

[[bench]]
name = "domain_lookup"
harness = false

[[bench]]
name = "router"
harness = false

[[bench]]
name = "vector"
harness = false

[[bench]]
name = "http_gateway"
harness = false

[[bin]]
name = "create-acme-account"
path = "tools/create_acme_account.rs"

[[bin]]
name = "cloudflare-check"
path = "tools/cloudflare_check.rs"
